Test/dafny0/IteratorResolution.dfy.expect
IteratorResolution.dfy(64,9): Error: LHS of assignment must denote a mutable field
IteratorResolution.dfy(84,13): Error: when allocating an object of type 'GenericIteratorResult', one of its constructor methods must be called
IteratorResolution.dfy(81,19): Error: RHS (of type bool) not assignable to LHS (of type int)
IteratorResolution.dfy(69,18): Error: arguments must have comparable types (got _T0 and int)
IteratorResolution.dfy(86,36): Error: incorrect type of method in-parameter (expected bool, got int)
IteratorResolution.dfy(22,9): Error: LHS of assignment must denote a mutable field
IteratorResolution.dfy(24,9): Error: LHS of assignment must denote a mutable field
IteratorResolution.dfy(129,11): Error: unresolved identifier: _decreases3
IteratorResolution.dfy(131,4): Error: LHS of assignment must denote a mutable field
IteratorResolution.dfy(130,26): Error: type of 'null' is a reference type, but it is used as int
IteratorResolution.dfy(138,11): Error: unresolved identifier: _decreases1
IteratorResolution.dfy(143,11): Error: unresolved identifier: _decreases0
IteratorResolution.dfy(157,8): Error: type parameter 0 (A) passed to type MyClass must support equality (got Stream)
IteratorResolution.dfy(157,14): Error: type parameter 0 (A) passed to type MyClass must support equality (got Stream)
IteratorResolution.dfy(158,8): Error: type parameter 1 (B) passed to type MyClass must support zero initialization (got Six)
IteratorResolution.dfy(158,14): Error: type parameter 1 (B) passed to type MyClass must support zero initialization (got Six)
IteratorResolution.dfy(165,8): Error: type parameter 0 (A) passed to type ClassWithConstructorX must support equality (got Stream)
IteratorResolution.dfy(165,14): Error: type parameter 0 (A) passed to type ClassWithConstructorX must support equality (got Stream)
IteratorResolution.dfy(166,8): Error: type parameter 1 (B) passed to type ClassWithConstructorX must support zero initialization (got Six)
IteratorResolution.dfy(166,14): Error: type parameter 1 (B) passed to type ClassWithConstructorX must support zero initialization (got Six)
IteratorResolution.dfy(173,40): Error: type parameter 0 (A) passed to method Init must support equality (got Stream)
IteratorResolution.dfy(174,40): Error: type parameter 1 (B) passed to method Init must support zero initialization (got Six)
IteratorResolution.dfy(179,24): Error: type parameter 0 (A) passed to method MyMethod must support equality (got Stream)
IteratorResolution.dfy(180,22): Error: type parameter 1 (B) passed to method MyMethod must support zero initialization (got Six)
IteratorResolution.dfy(185,13): Error: type parameter 0 (A) passed to function MyFunction must support equality (got Stream)
IteratorResolution.dfy(186,13): Error: type parameter 1 (B) passed to function MyFunction must support zero initialization (got Six)
IteratorResolution.dfy(213,10): Error: type parameter 0 (A) passed to type MyIter must support equality (got Stream)
IteratorResolution.dfy(213,18): Error: type parameter 0 (A) passed to type MyIter must support equality (got Stream)
IteratorResolution.dfy(216,10): Error: type parameter 0 (A) passed to type MyIter must support equality (got Stream)
IteratorResolution.dfy(216,18): Error: type parameter 0 (A) passed to type MyIter must support equality (got Stream)
IteratorResolution.dfy(220,23): Error: type parameter 0 (A) passed to type MyIter must support equality (got Stream)
IteratorResolution.dfy(221,23): Error: type parameter 1 (B) passed to type MyIter must support zero initialization (got Six)
IteratorResolution.dfy(223,10): Error: type parameter 0 (A) passed to type MyIter must support equality (got Stream)
IteratorResolution.dfy(226,13): Error: type parameter 0 (A) passed to type MyIter must support equality (got Stream)
IteratorResolution.dfy(230,29): Error: type parameter 0 (A) passed to type MyIter must support equality (got Stream)
IteratorResolution.dfy(230,64): Error: type parameter 0 (A) passed to type MyIter must support equality (got Stream)
IteratorResolution.dfy(235,8): Error: type parameter 0 (A) passed to type MyIter must support zero initialization (got Five)
IteratorResolution.dfy(235,8): Error: type parameter 1 (B) passed to type MyIter must support zero initialization (got Six)
IteratorResolution.dfy(235,16): Error: type parameter 0 (A) passed to type MyIter must support zero initialization (got Five)
IteratorResolution.dfy(235,16): Error: type parameter 1 (B) passed to type MyIter must support zero initialization (got Six)
IteratorResolution.dfy(260,10): Error: type parameter 1 (B) passed to type AnotherIter must support equality (got Stream)
IteratorResolution.dfy(260,18): Error: type parameter 1 (B) passed to type AnotherIter must support equality (got Stream)
IteratorResolution.dfy(262,10): Error: type parameter 1 (B) passed to type AnotherIter must support zero initialization (got Six)
IteratorResolution.dfy(262,18): Error: type parameter 1 (B) passed to type AnotherIter must support zero initialization (got Six)
IteratorResolution.dfy(276,8): Error: type parameter (_T0) passed to type Iter must support zero initialization (got Co)
IteratorResolution.dfy(276,16): Error: type parameter (_T0) passed to type Iter must support zero initialization (got Co)
46 resolution/type errors detected in IteratorResolution.dfy
